fix: facet quantity white-space: nowrap

--- a/styles/css/vtex.search-result.css
+++ b/styles/css/vtex.search-result.css
@@ -264,6 +264,7 @@
 .productCount {
 	width: 20%;
 	text-align: right;
+	white-space: nowrap;
 }
 /*breackpoint of container*/
 @media screen and (min-width: 40em) {
